projects now take from database fixed div expanding and card spacing

--- a/app/componentcss/project.css
+++ b/app/componentcss/project.css
@@ -4,6 +4,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  outline: 1px dotted red;
 }
 
 .top-section {
